refactor; add CarpBase and corresponding pivot utils

--- a/src/minicarp/CMakeLists.txt
+++ b/src/minicarp/CMakeLists.txt
@@ -3,17 +3,18 @@ set(minicarp-srcs
         whole_file_reader.cc
         ../common.cc)
 
-#add_executable(minicarp driver.cc ${minicarp-srcs})
 add_library(minicarp ${minicarp-srcs})
+#target_include_directories(minicarp PUBLIC /Users/schwifty/Repos/dfsman/carp/src)
 target_link_libraries(minicarp pdlfs-common)
 target_link_libraries(minicarp deltafs)
-target_include_directories(minicarp PRIVATE ..)
 
 add_executable(minicarp-runner driver.cc)
 target_link_libraries(minicarp-runner minicarp)
+target_include_directories(minicarp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
 
 add_executable(minicarp-test minicarp-tests.cc)
 target_link_libraries(minicarp-test minicarp)
+target_include_directories(minicarp-test PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..)
 # some ctest hook, not tested
 add_test(minicarp minicarp)
 
